[gd_scene load_steps=6 format=3 uid="uid://cw4gdphqp84nf"]

[ext_resource type="Script" path="res://Scripts/skeleton.gd" id="1_ds7ks"]
[ext_resource type="Texture2D" uid="uid://c3hedpl51giaa" path="res://brackeys_platformer_assets/sprites/skeleton_placeholder.png" id="2_icisc"]
[ext_resource type="PackedScene" uid="uid://dxkxtu84piv2c" path="res://Scenes/projectile.tscn" id="3_gijse"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bd20x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_icisc")
}],
"loop": true,
"name": &"placeholder",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"skeleton",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enmuh"]
size = Vector2(11, 25)

[node name="Skeleton" type="Area2D"]
position = Vector2(1, 0)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_ds7ks")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.96875, 1.39063)
sprite_frames = SubResource("SpriteFrames_bd20x")
animation = &"placeholder"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 5
visibility_layer = 5
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_enmuh")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Projectile" parent="." instance=ExtResource("3_gijse")]
position = Vector2(-2, 1)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.999999, -1.5)
scale = Vector2(1.2, 1.45)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
